--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "3000:3000"  
     environment:
       DATABASE_URL: ${DATABASE_URL}
-      SESSION_ID: ${SESSION_ID}
+      SESSION_ID: ${GuruBot~gaJz8bAA}
       REMOVEBG_KEY: ${REMOVEBG_KEY}
       PREFIX: ${PREFIX}
   redis:
